fix extra spacing on FormattedNumberInput as a result of adding a Form.Item

--- a/src/styles/antd-overrides/input.scss
+++ b/src/styles/antd-overrides/input.scss
@@ -217,6 +217,7 @@ input:-webkit-autofill-selected {
   min-height: 23px;
 }
 
-.ant-form-item-extra-only .ant-form-item {
-  margin-bottom: 5px;
+// added a wrapping Form.Item on FormattedNumberInput which gave it Form.Item's margin-bottom
+.formatted-number-input .ant-form-item {
+  margin-bottom: 0;
 }
